--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
-    "react-router-dom": "^7.6.2"
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2",
+    "redux": "^5.0.1",
+    "web-vitals": "^5.0.3"
   }
 }
